crates/pg_syntax/tests/snapshots/postgres_regress/partition_info@9.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: CREATE TABLE ptif_test01 PARTITION OF ptif_test0 FOR VALUES IN (1);
---
CreateStmt@0..67
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Table@7..12 "TABLE"
  Whitespace@12..13 " "
  RangeVar@13..24
    Ident@13..24 "ptif_test01"
  Whitespace@24..25 " "
  Partition@25..34 "PARTITION"
  Whitespace@34..35 " "
  Of@35..37 "OF"
  Whitespace@37..38 " "
  RangeVar@38..48
    Ident@38..48 "ptif_test0"
  Whitespace@48..49 " "
  For@49..52 "FOR"
  Whitespace@52..53 " "
  Values@53..59 "VALUES"
  Whitespace@59..60 " "
  PartitionBoundSpec@60..65
    InP@60..62 "IN"
    Whitespace@62..63 " "
    Ascii40@63..64 "("
    AConst@64..65
      Iconst@64..65 "1"
  Ascii41@65..66 ")"
  Ascii59@66..67 ";"

