crates/pg_syntax/tests/snapshots/postgres_regress/partition_join@101.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "CREATE TABLE prt2_m_p2 PARTITION OF prt2_m FOR VALUES FROM (250, 250) TO (500, 500);"
---
CreateStmt@0..84
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Table@7..12 "TABLE"
  Whitespace@12..13 " "
  RangeVar@13..22
    Ident@13..22 "prt2_m_p2"
  Whitespace@22..23 " "
  Partition@23..32 "PARTITION"
  Whitespace@32..33 " "
  Of@33..35 "OF"
  Whitespace@35..36 " "
  RangeVar@36..42
    Ident@36..42 "prt2_m"
  Whitespace@42..43 " "
  For@43..46 "FOR"
  Whitespace@46..47 " "
  Values@47..53 "VALUES"
  Whitespace@53..54 " "
  PartitionBoundSpec@54..82
    From@54..58 "FROM"
    Whitespace@58..59 " "
    Ascii40@59..60 "("
    AConst@60..63
      Iconst@60..63 "250"
    Ascii44@63..64 ","
    Whitespace@64..65 " "
    AConst@65..68
      Iconst@65..68 "250"
    Ascii41@68..69 ")"
    Whitespace@69..70 " "
    To@70..72 "TO"
    Whitespace@72..73 " "
    Ascii40@73..74 "("
    AConst@74..77
      Iconst@74..77 "500"
    Ascii44@77..78 ","
    Whitespace@78..79 " "
    AConst@79..82
      Iconst@79..82 "500"
  Ascii41@82..83 ")"
  Ascii59@83..84 ";"

