crates/pg_syntax/tests/snapshots/postgres_regress/partition_join@103.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO prt2_m SELECT i, i, i % 25 FROM generate_series(0, 599, 3) i;"
---
InsertStmt@0..73
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..18
    Ident@12..18 "prt2_m"
  Whitespace@18..19 " "
  SelectStmt@19..72
    Select@19..25 "SELECT"
    Whitespace@25..26 " "
    ResTarget@26..27
      ColumnRef@26..27
        Ident@26..27 "i"
    Ascii44@27..28 ","
    Whitespace@28..29 " "
    ResTarget@29..30
      ColumnRef@29..30
        Ident@29..30 "i"
    Ascii44@30..31 ","
    Whitespace@31..32 " "
    ResTarget@32..38
      AExpr@32..38
        ColumnRef@32..33
          Ident@32..33 "i"
        Whitespace@33..34 " "
        Ascii37@34..35 "%"
        Whitespace@35..36 " "
        AConst@36..38
          Iconst@36..38 "25"
    Whitespace@38..39 " "
    From@39..43 "FROM"
    Whitespace@43..44 " "
    RangeFunction@44..72
      List@44..69
        FuncCall@44..69
          Ident@44..59 "generate_series"
          Ascii40@59..60 "("
          AConst@60..61
            Iconst@60..61 "0"
          Ascii44@61..62 ","
          Whitespace@62..63 " "
          AConst@63..66
            Iconst@63..66 "599"
          Ascii44@66..67 ","
          Whitespace@67..68 " "
          AConst@68..69
            Iconst@68..69 "3"
      Ascii41@69..70 ")"
      Whitespace@70..71 " "
      Alias@71..72
        Ident@71..72 "i"
  Ascii59@72..73 ";"

