crates/pg_syntax/tests/snapshots/postgres_regress/partition_join@106.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT t1.a, t1.c, t2.b, t2.c FROM (SELECT * FROM prt1_m WHERE prt1_m.c = 0) t1 FULL JOIN (SELECT * FROM prt2_m WHERE prt2_m.c = 0) t2 ON (t1.a = (t2.b + t2.a)/2 AND t2.b = (t1.a + t1.b)/2) ORDER BY t1.a, t2.b;"
---
SelectStmt@0..210
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..11
    ColumnRef@7..11
      Ident@7..9 "t1"
      Ascii46@9..10 "."
      Ident@10..11 "a"
  Ascii44@11..12 ","
  Whitespace@12..13 " "
  ResTarget@13..17
    ColumnRef@13..17
      Ident@13..15 "t1"
      Ascii46@15..16 "."
      Ident@16..17 "c"
  Ascii44@17..18 ","
  Whitespace@18..19 " "
  ResTarget@19..23
    ColumnRef@19..23
      Ident@19..21 "t2"
      Ascii46@21..22 "."
      Ident@22..23 "b"
  Ascii44@23..24 ","
  Whitespace@24..25 " "
  ResTarget@25..29
    ColumnRef@25..29
      Ident@25..27 "t2"
      Ascii46@27..28 "."
      Ident@28..29 "c"
  Whitespace@29..30 " "
  From@30..34 "FROM"
  Whitespace@34..35 " "
  Ascii40@35..36 "("
  JoinExpr@36..188
    RangeSubselect@36..79
      SelectStmt@36..75
        Select@36..42 "SELECT"
        Whitespace@42..43 " "
        ResTarget@43..44
          ColumnRef@43..44
            AStar@43..44
              Ascii42@43..44 "*"
        Whitespace@44..45 " "
        From@45..49 "FROM"
        Whitespace@49..50 " "
        RangeVar@50..56
          Ident@50..56 "prt1_m"
        Whitespace@56..57 " "
        Where@57..62 "WHERE"
        Whitespace@62..63 " "
        AExpr@63..75
          ColumnRef@63..71
            Ident@63..69 "prt1_m"
            Ascii46@69..70 "."
            Ident@70..71 "c"
          Whitespace@71..72 " "
          Ascii61@72..73 "="
          Whitespace@73..74 " "
          AConst@74..75
            Iconst@74..75 "0"
      Ascii41@75..76 ")"
      Whitespace@76..77 " "
      Alias@77..79
        Ident@77..79 "t1"
    Whitespace@79..80 " "
    Full@80..84 "FULL"
    Whitespace@84..85 " "
    Join@85..89 "JOIN"
    Whitespace@89..90 " "
    Ascii40@90..91 "("
    RangeSubselect@91..134
      SelectStmt@91..130
        Select@91..97 "SELECT"
        Whitespace@97..98 " "
        ResTarget@98..99
          ColumnRef@98..99
            AStar@98..99
              Ascii42@98..99 "*"
        Whitespace@99..100 " "
        From@100..104 "FROM"
        Whitespace@104..105 " "
        RangeVar@105..111
          Ident@105..111 "prt2_m"
        Whitespace@111..112 " "
        Where@112..117 "WHERE"
        Whitespace@117..118 " "
        AExpr@118..130
          ColumnRef@118..126
            Ident@118..124 "prt2_m"
            Ascii46@124..125 "."
            Ident@125..126 "c"
          Whitespace@126..127 " "
          Ascii61@127..128 "="
          Whitespace@128..129 " "
          AConst@129..130
            Iconst@129..130 "0"
      Ascii41@130..131 ")"
      Whitespace@131..132 " "
      Alias@132..134
        Ident@132..134 "t2"
    Whitespace@134..135 " "
    On@135..137 "ON"
    Whitespace@137..138 " "
    Ascii40@138..139 "("
    BoolExpr@139..188
      AExpr@139..161
        ColumnRef@139..143
          Ident@139..141 "t1"
          Ascii46@141..142 "."
          Ident@142..143 "a"
        Whitespace@143..144 " "
        Ascii61@144..145 "="
        Whitespace@145..146 " "
        Ascii40@146..147 "("
        AExpr@147..161
          AExpr@147..158
            ColumnRef@147..151
              Ident@147..149 "t2"
              Ascii46@149..150 "."
              Ident@150..151 "b"
            Whitespace@151..152 " "
            Ascii43@152..153 "+"
            Whitespace@153..154 " "
            ColumnRef@154..158
              Ident@154..156 "t2"
              Ascii46@156..157 "."
              Ident@157..158 "a"
          Ascii41@158..159 ")"
          Ascii47@159..160 "/"
          AConst@160..161
            Iconst@160..161 "2"
      Whitespace@161..162 " "
      And@162..165 "AND"
      Whitespace@165..166 " "
      AExpr@166..188
        ColumnRef@166..170
          Ident@166..168 "t2"
          Ascii46@168..169 "."
          Ident@169..170 "b"
        Whitespace@170..171 " "
        Ascii61@171..172 "="
        Whitespace@172..173 " "
        Ascii40@173..174 "("
        AExpr@174..188
          AExpr@174..185
            ColumnRef@174..178
              Ident@174..176 "t1"
              Ascii46@176..177 "."
              Ident@177..178 "a"
            Whitespace@178..179 " "
            Ascii43@179..180 "+"
            Whitespace@180..181 " "
            ColumnRef@181..185
              Ident@181..183 "t1"
              Ascii46@183..184 "."
              Ident@184..185 "b"
          Ascii41@185..186 ")"
          Ascii47@186..187 "/"
          AConst@187..188
            Iconst@187..188 "2"
  Ascii41@188..189 ")"
  Whitespace@189..190 " "
  SortBy@190..203
    Order@190..195 "ORDER"
    Whitespace@195..196 " "
    By@196..198 "BY"
    Whitespace@198..199 " "
    ColumnRef@199..203
      Ident@199..201 "t1"
      Ascii46@201..202 "."
      Ident@202..203 "a"
  Ascii44@203..204 ","
  Whitespace@204..205 " "
  SortBy@205..209
    ColumnRef@205..209
      Ident@205..207 "t2"
      Ascii46@207..208 "."
      Ident@208..209 "b"
  Ascii59@209..210 ";"

