crates/pg_syntax/tests/snapshots/postgres_regress/partition_join@11.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "CREATE TABLE prt2 (a int, b int, c varchar) PARTITION BY RANGE(b);"
---
CreateStmt@0..66
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Table@7..12 "TABLE"
  Whitespace@12..13 " "
  RangeVar@13..17
    Ident@13..17 "prt2"
  Whitespace@17..18 " "
  Ascii40@18..19 "("
  ColumnDef@19..24
    Ident@19..20 "a"
    Whitespace@20..21 " "
    TypeName@21..24
      IntP@21..24 "int"
  Ascii44@24..25 ","
  Whitespace@25..26 " "
  ColumnDef@26..31
    Ident@26..27 "b"
    Whitespace@27..28 " "
    TypeName@28..31
      IntP@28..31 "int"
  Ascii44@31..32 ","
  Whitespace@32..33 " "
  ColumnDef@33..42
    Ident@33..34 "c"
    Whitespace@34..35 " "
    TypeName@35..42
      Varchar@35..42 "varchar"
  Ascii41@42..43 ")"
  Whitespace@43..44 " "
  PartitionSpec@44..64
    Partition@44..53 "PARTITION"
    Whitespace@53..54 " "
    By@54..56 "BY"
    Whitespace@56..57 " "
    Range@57..62 "RANGE"
    Ascii40@62..63 "("
    PartitionElem@63..64
      Ident@63..64 "b"
  Ascii41@64..65 ")"
  Ascii59@65..66 ";"

